Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31984

Behavior regression between platform plugins on Android on when calling show()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.1.0
    • 5.1.0 RC1
    • GUI: Window management
    • None
    • Android
    • 8f8c29b1c88545c8dee41743f50661885b5c1ec2

      When calling show() on a window and using the GL-based platform plugin on Android, the window will correctly be shown in fullscreen because the EGLFS superclass implements the ShowIsFullscreen style hint. However, this is missing from the raster based plugin, so behavior will be different based on somewhat arbitrary parameters and pure widget-based apps will be not fill the screen by default, requiring platform-specific code to make it work correctly.

        For Gerrit Dashboard: QTBUG-31984
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes