Android: Fix initial window size for raster backend

We forgot to set the ShowIsFullScreen property for the raster
engine case. OpenGL windows already did the right thing, since
the GL backend is based on eglFS. The iOS backend also has
this logic.

Task-number: QTBUG-31984
Change-Id: I1cf5df32d79f441768126f00632107a7971eb5ad
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 8f8c29b1c88545c8dee41743f50661885b5c1ec2 https://github.com/qt/qtbase/commit/8f8c29b1c88545c8dee41743f50661885b5c1ec2