src/plugins/platforms/android/src/qandroidplatformintegration.h
@@ -280,6 +280,13 @@ name|services
 argument_list|()
 specifier|const
 block|;
+name|QVariant
+name|styleHint
+argument_list|(
+argument|StyleHint hint
+argument_list|)
+specifier|const
+block|;
 name|QStringList
 name|themeNames
 argument_list|()
